--- a/IDGenWebsite.csproj
+++ b/IDGenWebsite.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="ExcelDataReader" Version="3.6.0" />
+    <PackageReference Include="IronOcr" Version="2021.2.1" />
     <PackageReference Include="IronPdf" Version="2021.3.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="5.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="5.0.3" />
