Added Identity To the Project

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=IDGenWebsiteDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=IDGenWebsiteDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "IDGenWebsiteContextConnection": "Server=(localdb)\\mssqllocaldb;Database=IDGenWebsite;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
