Identity Setup and Working Seed Data Working

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,11 @@
 {
   "ConnectionStrings": {
+    //"DefaultConnection": "Server=IDGenWebsiteDB,1433;Database=IDGenWebsiteDB;User Id=sa;Password=*CHevy6969*;",
+    //"IDGenWebsiteContextConnection": "Server=IDGenWebsiteDB,1433;Database=IDGenWebsite;User Id=sa;Password=*CHevy6969*;"
+    //"DefaultConnection": "Server=localhost;Database=IDGenWebsiteDB;User Id=sa;Password=*CHevy6969*;",
+    //"IDGenWebsiteContextConnection": "Server=localhost;Database=IDGenWebsite;User Id=sa;Password=*CHevy6969*;"
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=IDGenWebsiteDB;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "IDGenWebsiteContextConnection": "Server=(localdb)\\mssqllocaldb;Database=IDGenWebsite;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "IDGenWebsiteContextConnection": "Server=(localdb)\\mssqllocaldb;Database=IDGenWebsiteIdentityDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
