--- a/IDGenWebsite.csproj
+++ b/IDGenWebsite.csproj
@@ -31,4 +31,8 @@
     <PackageReference Include="System.Text.Encoding.CodePages" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Utilities\" />
+  </ItemGroup>
+
 </Project>
