--- a/IDGenWebsite.csproj
+++ b/IDGenWebsite.csproj
@@ -29,6 +29,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
     <PackageReference Include="PdfPig" Version="0.1.4" />
     <PackageReference Include="QRCoder" Version="1.4.1" />
+    <PackageReference Include="SendGrid" Version="9.23.2" />
     <PackageReference Include="System.Drawing.Primitives" Version="4.3.0" />
     <PackageReference Include="System.Text.Encoding.CodePages" Version="5.0.0" />
   </ItemGroup>
