--- a/appsettings.json
+++ b/appsettings.json
@@ -2,7 +2,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=IDGenWebsiteDB;Trusted_Connection=True;MultipleActiveResultSets=true",
     "IDGenWebsiteContextConnection": "Server=(localdb)\\mssqllocaldb;Database=IDGenWebsiteIdentityDB;Trusted_Connection=True;MultipleActiveResultSets=true",
-    
+    "IdGenWebsiteDBProd": "Server=tcp:idgenwebsitedb.database.windows.net,1433;Initial Catalog=IdGenWebsiteDB;Persist Security Info=False;User ID=lemieuxcasey;Password=*CHevy6969*;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "IdGenWebsiteIdentityProd": "Server=tcp:idgenwebsitedb.database.windows.net,1433;Initial Catalog=idgenIdentitydb;Persist Security Info=False;User ID=lemieuxcasey;Password=*CHevy6969*;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
