--- a/IDGenWebsite.csproj
+++ b/IDGenWebsite.csproj
@@ -10,13 +10,11 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.9.0" />
+    <PackageReference Include="Azure.Storage.Files.Shares" Version="12.1.0" />
+    <PackageReference Include="Azure.Storage.Queues" Version="12.2.0" />
     <PackageReference Include="BarcodeLib" Version="2.4.0" />
     <PackageReference Include="ExcelDataReader" Version="3.6.0" />
     <PackageReference Include="Haukcode.WkHtmlToPdfDotNet" Version="1.5.8" />
-    <PackageReference Include="Iron.Assets.Rendering.Universal" Version="20.0.0" />
-    <PackageReference Include="IronOcr" Version="2021.2.1" />
-    <PackageReference Include="IronPdf" Version="2021.3.1" />
-    <PackageReference Include="IronPdf.Assets.Rendering.Universal" Version="22.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="5.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="5.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.4" />
@@ -26,9 +24,9 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Azure" Version="1.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
-    <PackageReference Include="PdfPig" Version="0.1.4" />
     <PackageReference Include="QRCoder" Version="1.4.1" />
     <PackageReference Include="SendGrid" Version="9.23.2" />
     <PackageReference Include="System.Drawing.Primitives" Version="4.3.0" />
