--- a/IDGenWebsite.csproj
+++ b/IDGenWebsite.csproj
@@ -14,7 +14,7 @@
     <PackageReference Include="Azure.Storage.Queues" Version="12.2.0" />
     <PackageReference Include="BarcodeLib" Version="2.4.0" />
     <PackageReference Include="ExcelDataReader" Version="3.6.0" />
-    <PackageReference Include="Haukcode.WkHtmlToPdfDotNet" Version="1.5.8" />
+    <PackageReference Include="Haukcode.WkHtmlToPdfDotNet" Version="0.999.0-debug" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="5.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="5.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.4" />
