Qr Template Fix Working
QR Templates for homerooms is now working correctly.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,11 @@
 {
-  "ConnectionStrings": {
+  /*"ConnectionStrings": {
     "IdGenWebsiteDBProd": "Server=(localdb)\\mssqllocaldb;Database=IDGenWebsiteDB;Trusted_Connection=True;MultipleActiveResultSets=true",
     "IdGenWebsiteIdentityProd": "Server=(localdb)\\mssqllocaldb;Database=IDGenWebsiteIdentityDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }, */
+  "ConnectionStrings": {
+    "IdGenWebsiteDBProd": "server=localhost;user=root;password=*CHevy6969*;database=IDGenWebsiteDB",
+    "IdGenWebsiteIdentityProd": "server=localhost;user=root;password=*CHevy6969*;database=IDGenWebsiteIdentityDB"
   },
   "Logging": {
     "LogLevel": {
