--- a/IDGenWebsite.csproj
+++ b/IDGenWebsite.csproj
@@ -27,6 +27,7 @@
     <PackageReference Include="Microsoft.Extensions.Azure" Version="1.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.1" />
     <PackageReference Include="QRCoder" Version="1.4.1" />
     <PackageReference Include="SendGrid" Version="9.23.2" />
     <PackageReference Include="System.Drawing.Primitives" Version="4.3.0" />
